feat: Support SoundCloud 	modified:   .env.example 	modified:   package.json 	modified:   src/commands/play.ts 	modified:   src/inversify.config.ts 	modified:   src/managers/player.ts 	modified:   src/services/config.ts 	modified:   src/services/get-songs.ts 	modified:   src/services/player.ts 	new file:   src/services/soundcloud-api.ts 	modified:   src/services/third-party.ts 	modified:   src/types.ts 	modified:   src/utils/build-embed.ts 	modified:   src/utils/get-youtube-and-spotify-suggestions-for.ts 	modified:   yarn.lock

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ YOUTUBE_API_KEY=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
+# See https://www.npmjs.com/package/soundcloud.ts for instructions to get this.
+SOUNDCLOUD_CLIENT_ID=
+SOUNDCLOUD_OAUTH_TOKEN=
+
 ############
 # Optional #
 ############
